--- a/new/frontend/package.json
+++ b/new/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "core-js": "^3.8.3",
+    "hls.js": "^1.6.15",
+    "multer": "^2.0.2",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
