JWT令牌功能完善

--- a/new/backend/.env
+++ b/new/backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=116.205.179.186
-DB_USER=qw
-DB_PASSWORD=qw123
-DB_NAME=mydb
+DB_HOST=1.12.241.159
+DB_USER=mydb
+DB_PASSWORD=qw123456
+DB_NAME=test
 DB_PORT=3306
 JWT_SECRET=BqilOzOzHW7VPuDjEIwvmAQPVI03x27IaeSedeQ2Ij4=
-JWT_EXPIRES_IN=7d
+JWT_EXPIRES_IN=1h
